# terraria-clone

./: .clang-format  .gitignore  CMakeLists.txt  Justfile  README.md  imgui.ini
src/: main.cpp
src/game_layer/: asset_manager.cpp  asset_manager.hpp  block.hpp  game_main.cpp  game_main.hpp  game_map.cpp  game_map.hpp  helpers.cpp  helpers.hpp  random.cpp  random.hpp
src/platform/: asserts.cpp  asserts.hpp  main.cpp
